Address review comments for bug 476150 r=jcranmer